--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</nav>			
 		</header>
 		<main>
-			<H2>Experience the Difference</h2>				
+			<h2>Experience the Difference</h2>				
 			<p>Sparky's Coffee House provides the experience of consuming a high-quality specialty coffee. More than a beverage, our delicious coffee begins with 100% brutte arabica coffee beans that are grown in India at an altitude of 1500m above sea level which helps to produce a more desired coffee flavor. Come experience the difference at Sparky's Coffee House.</p>
 			<ul>
 				<li>Small batch roasting to ensure unparalleled quality and freshness</li>
