--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<ul>
 				<li>Small batch roasting to ensure unparalleled quality and freshness</li>
 				<li>Flavored coffees for sale</li>
-				<li>Live acoustic music on Thursday and Saturday nights
+				<li>Live acoustic music on Thursday and Saturday nights</li>
 				<li>Showcase your artwork to sell in our cafe</li>
 			</ul>			
 			<address>
