--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Marcus Thomas-->
+		<!-- Marcus Thomas -->
 		<title>Coffee Express</title>
 		<meta charset="utf-8">
 	</head>
@@ -11,7 +11,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="coffee.html">Coffee</a>
+					<li><a href="coffee.html">Coffee</a></li>
 					<li><a href="events.html">Events</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
